2001-08-12  Martin Baulig  <baulig@suse.de>

	* gnome-ditem.h (gnome_desktop_item_get_location): Make
	the return value non-const.

2001-08-06  Martin Baulig  <baulig@suse.de>

	* gnome-ditem.[ch]: Fix #includes for the new location.

	* Makefile.am: New file.
