@@ -2,7 +2,7 @@ Makefile.in
 Makefile
 .deps
 .libs
-gnome-desktop.h
+GNOME_Desktop.h
 *-stubs.c
 *-skels.c
 *-common.c
