@@ -1,3 +1,7 @@
+2001-08-17  Martin Baulig  <baulig@suse.de>
+
+	* gnome-ditem.[ch]: Renamed to gnome-desktop-item.[ch].
+
 2001-08-12  Martin Baulig  <baulig@suse.de>
 
 	* gnome-ditem.h (gnome_desktop_item_get_location): Make
